<resources>
    <string name="app_name">MyCitroenC5</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="path_computer">Путевой компьютер</string>
    <string name="personalization">Персонализация</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="reset">Сбросить</string>
    <string name="trip_computer">Путевой компьютер</string>
    <string name="instant_info">Мгновенное инфо</string>
    <string name="trip_1">Маршрут 1</string>
    <string name="Trip2">Маршрут 2</string>
    <string name="celsius">°С</string>
    <string name="sport_mode">Sport Mode</string>
    <string name="adaptive_lighting">Управляемые фары</string>
    <string name="guide_me_home">Проводи меня домой</string>
    <string name="cmb_brightness">Яркость приборной панели</string>
    <string name="a_you_sure_to_reset">Вы уверены, что хотите сбросить пробег?</string>
    <string name="a_you_sure_to_reset_day1">Вы уверены, что хотите сбросить дневной пробег 1?</string>
    <string name="a_you_sure_to_reset_day2">Вы уверены, что хотите сбросить дневной пробег 2?</string>
    <string name="cancel">Отмена</string>
    <string name="parktronics">Парктроник</string>
    <string name="driver_opening">Комфортная посадка</string>
    <string name="auto_handbrake">Авто стояночный тормоз</string>
    <string name="alerts_journal">Журнал ошибок</string>
    <string name="lightings">Освещение</string>
    <string name="comfort">Комфорт</string>
    <string name="cmb">Настройка темы</string>
    <string name="can_monitor">CAN монитор</string>
    <string name="duration_in_sec">Длительность, сек</string>
    <string name="_0">0 км</string>
    <string name="id">ID</string>
    <string name="dlc">DLC</string>
    <string name="d_0">D[0]</string>
    <string name="d_1">D[1]</string>
    <string name="d_2">D[2]</string>
    <string name="d_3">D[3]</string>
    <string name="d_7">D[7]</string>
    <string name="d_6">D[6]</string>
    <string name="d_5">D[5]</string>
    <string name="d_4">D[4]</string>
    <string name="esp">Курсовая устойчивость (ESP)</string>
    <string name="sport_theme">Спортивный цвет</string>
    <string name="standatr_theme">Стандартный цвет</string>
    <string name="_0_0_100">0.0 л/100</string>
    <string name="_7_4">7.4 м/ч</string>
    <string name="_0kmh">0 км/ч</string>
    <string name="ban">Ban</string>
    <string name="window_config">Настройка окон</string>
    <string name="tahometr">Тахометр</string>
    <string name="music">Музыка</string>
    <string name="navigation">Навигация</string>
    <string name="temperature">Температура</string>
    <string name="trip">Расход</string>
    <string name="nothing">Ничего</string>
    <string name="right">Правое</string>
    <string name="left">Левое</string>
    <string name="performance">Performance</string>
    <string name="normal">Normal</string>
    <string name="_000000">000000</string>
    <string name="odo_title">Пробег:</string>
    <string name="km">км</string>
    <string name="day_2">Дневной 2</string>
    <string name="day_1">Дневной 1</string>
    <string name="reset_1">Сбросить 1</string>
    <string name="reset_2">Сбросить 2</string>
</resources>