<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/png_background"
    tools:context=".ui.alerts.AlertsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <TextView
        android:id="@+id/textAlertJournalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/alerts_journal"
        android:textColor="@color/main_yellow"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_alerts"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginVertical="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textAlertJournalTitle">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/linearRVlog"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:visibility="gone"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textAlertJournalTitle">


        <LinearLayout
            android:layout_width="match_parent"
            android:padding="1dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:textSize="22sp"
                android:padding="6dp"
                android:text="@string/id"
                android:background="@color/main_yellow"
                android:textColor="@color/background"/>

            <TextView
                android:id="@+id/tv_dlc"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:textSize="22sp"
                android:padding="6dp"
                android:text="@string/dlc"
                android:background="@color/semi_yellow"
                android:textColor="@color/background"/>

            <TextView
                android:id="@+id/tv_data0"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:textSize="22sp"
                android:padding="6dp"
                android:text="@string/d_0"
                android:background="@color/main_yellow"
                android:textColor="@color/background"/>
            <TextView
                android:id="@+id/tv_data1"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:textSize="22sp"
                android:padding="6dp"
                android:text="@string/d_1"
                android:background="@color/semi_yellow"
                android:textColor="@color/background"/>
            <TextView
                android:id="@+id/tv_data2"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:textSize="22sp"
                android:padding="6dp"
                android:text="@string/d_2"
                android:background="@color/main_yellow"
                android:textColor="@color/background"/>
            <TextView
                android:id="@+id/tv_data3"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:textSize="22sp"
                android:padding="6dp"
                android:text="@string/d_3"
                android:background="@color/semi_yellow"
                android:textColor="@color/background"/>
            <TextView
                android:id="@+id/tv_data4"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:textSize="22sp"
                android:padding="6dp"
                android:text="@string/d_4"
                android:background="@color/main_yellow"
                android:textColor="@color/background"/>
            <TextView
                android:id="@+id/tv_data5"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:textSize="22sp"
                android:padding="6dp"
                android:text="@string/d_5"
                android:background="@color/semi_yellow"
                android:textColor="@color/background"/>
            <TextView
                android:id="@+id/tv_data6"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:textSize="22sp"
                android:padding="6dp"
                android:text="@string/d_6"
                android:background="@color/main_yellow"
                android:textColor="@color/background"/>
            <TextView
                android:id="@+id/tv_data7"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:textSize="22sp"
                android:padding="6dp"
                android:text="@string/d_7"
                android:background="@color/semi_yellow"
                android:textColor="@color/background"/>


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_logs"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />



    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textAlertJournalTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>