<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/png_background"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.42" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/main_yellow"
        android:state_checked="true"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:textColor="@color/background"
        android:textSize="26sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.844"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_resetDay2"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/main_yellow"
        android:state_checked="true"
        android:text="@string/reset_2"
        android:textAllCaps="false"
        android:textColor="@color/background"
        android:textSize="26sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.844"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_resetDay1"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:backgroundTint="@color/main_yellow"
        android:state_checked="true"
        android:text="@string/reset_1"
        android:textAllCaps="false"
        android:textColor="@color/background"
        android:textSize="26sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/button_resetDay2"
        app:layout_constraintEnd_toEndOf="@+id/button_resetDay2" />

    <TextView
        android:id="@+id/text_trip_computer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/trip_computer"
        android:textColor="@color/main_yellow"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/guideline" />


    <TextView
        android:id="@+id/text_odometer_fact"
        style="@style/TextItemsStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/_000000"
        android:textColor="@color/main_yellow"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineRight2"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/text_odometer_km"
        style="@style/TextItemsStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="4dp"
        android:text="@string/km"
        android:textColor="@color/main_yellow"
        app:layout_constraintStart_toEndOf="@+id/text_odometer_fact"
        app:layout_constraintTop_toTopOf="@+id/text_odometer_fact" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/trip_group"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:checkedButton="@id/button_1"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/text_trip_computer"
        app:layout_constraintTop_toBottomOf="@+id/text_trip_computer"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_1"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:backgroundTint="@color/btn_color_toggle"
            android:state_checked="true"
            android:text="@string/instant_info"
            android:textAllCaps="false"
            android:textColor="@color/text_color_toggle"
            android:textSize="26sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_2"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:backgroundTint="@color/btn_color_toggle"
            android:text="@string/trip_1"
            android:textAllCaps="false"
            android:textColor="@color/text_color_toggle"
            android:textSize="26sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_3"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:backgroundTint="@color/btn_color_toggle"
            android:text="@string/Trip2"
            android:textAllCaps="false"
            android:textColor="@color/text_color_toggle"
            android:textSize="26sp" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <LinearLayout
        android:id="@+id/linear_moment_trip"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="34dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight2"
        app:layout_constraintStart_toStartOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/text_trip_computer">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="16dp"
                android:contentDescription="@string/app_name"
                android:fontFamily="sans-serif"
                android:src="@drawable/c5mini"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginVertical="16dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/vector_path" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="4dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/vector_gas_tank" />

            <TextView
                android:id="@+id/text_distance_traveled_moment"
                style="@style/TextItemsStyle"
                android:text="@string/_0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/vector_gas_tank" />

            <TextView
                android:id="@+id/text_l100_moment"
                style="@style/TextItemsStyle"
                android:text="@string/_0_0_100" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <TextView
                style="@style/TextItemsStyle"
                android:layout_width="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:text="@string/day_1" />

            <TextView
                android:id="@+id/text_trip_day1"
                style="@style/TextItemsStyle"
                android:layout_weight="4"
                android:text="@string/_000000" />
            <TextView
                style="@style/TextItemsStyle"
               android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:text="@string/km" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextItemsStyle"
                android:layout_width="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:text="@string/day_2" />

            <TextView
                android:id="@+id/text_trip_day2"
                style="@style/TextItemsStyle"
                android:layout_weight="4"
                android:text="@string/_000000" />
            <TextView
                style="@style/TextItemsStyle"
                android:layout_marginStart="4dp"
                android:text="@string/km" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_trip"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="34dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight2"
        app:layout_constraintStart_toStartOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/text_trip_computer">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginVertical="16dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/vector_path" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="16dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/c5mini" />

            <TextView
                android:id="@+id/text_distance"
                style="@style/TextItemsStyle"
                android:text="@string/_0"
              />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginVertical="16dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/vector_speed" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="16dp"
                android:contentDescription="@string/app_name"
                android:fontFamily="sans-serif"
                android:src="@drawable/c5mini"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_speed"
                style="@style/TextItemsStyle"
                android:text="@string/_0kmh" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/vector_gas_tank" />

            <TextView
                android:id="@+id/text_l100"
                style="@style/TextItemsStyle"
                android:text="@string/_0_0_100"
                tools:text="14.4 л/100"
             />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/vector_engine_time" />

            <TextView
                android:id="@+id/text_time1"
                style="@style/TextItemsStyle"
                android:text="@string/_7_4"
                />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>